Add project overview and minor styling adjustments

--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
 
 :root {
   --foreground: #000000;
-  --background-start: #cee3fd;
+  --background-start: #e5f0ff;
   --background-end: #ffffff;
 }
 
