--- a/src/app.css
+++ b/src/app.css
@@ -4,26 +4,23 @@
 
 :root {
   --foreground: #000000;
-  --background-start: #e5f0ff;
-  --background-end: #ffffff;
+  --page-background: #f1f7ff;
+  --background: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground: #ffffff;
-    --background-start: #172554;
-    --background-end: #000000;
+    --page-background: #121d44;
+    --background: #000000;
   }
 }
 
 body {
   color: var(--foreground);
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      var(--background-end)
-    )
-    var(--background-start);
+  background: var(--page-background);
+
+  @apply font-sans antialiased text-base
 }
 
 .inline-link {
